--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
+    "rollup": "^4.12.0",
     "simplebar-react": "^3.2.4",
     "slick-carousel": "^1.8.1",
     "stylis": "^4.3.0",
